Update na tradução para português/inglês em hover Traduzir para Português Translate to English

--- a/src/components/i18n/translations/en.json
+++ b/src/components/i18n/translations/en.json
@@ -187,7 +187,9 @@
       "sobre": "About",
       "projetos": "Projects",
       "contato": "Contact"
-    }
+    },
 
+    "__comment-Languagem": "Past Languagem - LanguagemSwitcher.jsx",
+    "selectYourLanguage": "Traduzir para Português"
   }
 }
