--- a/src/components/i18n/translations/ptBr.json
+++ b/src/components/i18n/translations/ptBr.json
@@ -187,8 +187,11 @@
       "sobre": "Sobre",
       "projetos": "Projetos",
       "contato": "Contato"
-    }
+    },
 
+    "__comment-Languagem": "Past Languagem - LanguagemSwitcher.jsx",
+    "selectYourLanguage": "Translate to English"
+    
   }
   
 }
