--- a/src/components/i18n/translations/ptBr.json
+++ b/src/components/i18n/translations/ptBr.json
@@ -83,6 +83,46 @@
 
     "__comment-Projects": "Past Skills - Projectsitem.jsx e Data.jsx - Projects Obs: Poderias usar o ID mas estou saudno o title deles para facilitar a leitura",
     "projects": {
+      "BiCity": {
+        "title": "BiCity",
+        "description": "Aplicativo BiCity para ciclistas de São Paulo, oferecendo avaliação coletiva das ciclovias da cidade e centralização de eventos relacionados ao ciclismo - IFSP 2025."
+      },
+      "CFB jQuery": {
+        "title": "CFB jQuery",
+        "description": "Projeto educacional focado no aprendizado de jQuery, criar interfaces web interativas com manipulação dinâmica de elementos - CFB Cursos em 2025."
+      },
+      "Animais Fantasticos": {
+        "title": "Animais Fantasticos",
+        "description": "Focado no aprendizado de Web, mostra  informações sobre animais, interface dinâmica e responsiva com animações - Origamid em 2025."
+      },
+      "JavaScript ES6+": {
+        "title": "JavaScript ES6+",
+        "description": "Focado no aprendizado de JavaScript ES6, explorando conceitos modernos como arrow functions, destructuring, modules e async/await - Origamid em 2025."
+      },
+      "Análise de dados COVID-19": {
+        "title": "Análise de dados COVID-19",
+        "description": "Uma análise de dados sobre o impacto da vacinação na redução de casos e óbitos por COVID-19,  para explorar tendências e padrões - IFSP em 2025."
+      },
+      "Cadastro de Produtos": {
+        "title": "Cadastro de Produtos",
+        "description": "Sistema CRUD para cadastro de produtos,  permitindo criar, visualizar, atualizar e excluir produtos em um banco de dados - IFSP em 2024."
+      },
+      "RESTAPI": {
+        "title": "REST API",
+        "description": "API para fornecer endpoints que permitem a integração e manipulação de dados em aplicações web - Origamid em 2024."
+      },
+      "Handel": {
+        "title": "Handel",
+        "description": "Site WordPress para uma loja virtual, integração de plugins e estilização avançadas - Origamid em 2024."
+      },
+      "Solar Calculator": {
+        "title": "Solar Calculator",
+        "description": "Uma calculadora solar, projetada para estimar a geração de energia solar com base em parâmetros específicos, oferecendo uma interface simples e funcional dexei o APK nos links - IFSP em 2024."
+      },
+      "Bikcraft": {
+        "title": "Bikcraft",
+        "description": "Site WordPress para uma loja de bicicletas, com plugins personalizados, design responsivo e gerenciamento dinâmico de conteúdo usando - Origamid em 2024."
+      },
       "ingressoja": {
         "title": "Ingressoja",
         "description": "Site de eventos onde o usuário pode escolher um filme, peça, palestra de sua preferência - IFSP em 2023."
