Add novos projetos na section Porjetos em PT

--- a/src/components/i18n/translations/ptBr.json
+++ b/src/components/i18n/translations/ptBr.json
@@ -89,7 +89,7 @@
       },
       "CFB jQuery": {
         "title": "CFB jQuery",
-        "description": "Projeto educacional focado no aprendizado de jQuery, criar interfaces web interativas com manipulação dinâmica de elementos - CFB Cursos em 2025."
+        "description": "Projeto focado no aprendizado de jQuery, criar interfaces web interativas com manipulação dinâmica de elementos - CFB Cursos em 2025."
       },
       "Animais Fantasticos": {
         "title": "Animais Fantasticos",
@@ -97,7 +97,7 @@
       },
       "JavaScript ES6+": {
         "title": "JavaScript ES6+",
-        "description": "Focado no aprendizado de JavaScript ES6, explorando conceitos modernos como arrow functions, destructuring, modules e async/await - Origamid em 2025."
+        "description": "Focado no aprendizado de JavaScript ES6+, explorando conceitos modernos como arrow functions, destructuring, modules e async/await - Origamid em 2025."
       },
       "Análise de dados COVID-19": {
         "title": "Análise de dados COVID-19",
